<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/avatar_post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        android:src="@mipmap/ic_launcher" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/postName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/post_name"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/postData"
        app:layout_constraintEnd_toStartOf="@id/options"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        android:text="@string/post_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/postData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/post_data"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toStartOf="@id/options"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/postName"
        android:text="@string/post_data" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/options"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/options"
        android:background="@android:color/transparent"
        android:minHeight="48dp"
        android:src="@drawable/ic_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/avatar" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,  postName, postData, options" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/postText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:contentDescription="@string/post_data"
        android:text="@string/post_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerBarrier"
        app:layout_constraintBottom_toBottomOf="@id/headerBarrier2" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="postText" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/like"
        android:padding="10dp"
        android:src="@drawable/ic_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/headerBarrier2"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/countLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/count_like"
        android:singleLine="true"
        android:text="@string/count_like"
        app:layout_constraintTop_toTopOf="@id/like"
        app:layout_constraintBottom_toBottomOf="@id/like"
        app:layout_constraintStart_toEndOf="@id/like" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/share"
        android:padding="10dp"
        android:src="@drawable/ic_share"
        app:layout_constraintStart_toEndOf="@id/countLike"
        app:layout_constraintTop_toTopOf="@id/headerBarrier2"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/countShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/count_share"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/count_share"
        app:layout_constraintTop_toTopOf="@id/share"
        app:layout_constraintBottom_toBottomOf="@id/share"
        app:layout_constraintStart_toEndOf="@id/share" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/viewing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/viewing"
        android:padding="10dp"
        android:src="@drawable/ic_viewing"
        app:layout_constraintEnd_toStartOf="@+id/countViewing"
        app:layout_constraintTop_toTopOf="@id/headerBarrier2"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/countViewing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/count_viewing"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/count_viewing"
        app:layout_constraintBottom_toBottomOf="@id/viewing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewing" />

</androidx.constraintlayout.widget.ConstraintLayout>